Fixed alignment bug when carousel has only one slide.

--- a/less/carousel.less
+++ b/less/carousel.less
@@ -286,9 +286,11 @@
 		overflow:visible;
 		.slick-track {
 			display:table;
+			width:100%!important;
 			.displayFlex();
 			flex-direction:row;
 			overflow:visible;
+			justify-content:center;
 		}
 	}
 }
